--- a/pom.xml
+++ b/pom.xml
@@ -625,7 +625,11 @@ public final class BuildInformation {
 		    <artifactId>sysout-over-slf4j</artifactId>
 		    <version>1.0.2</version>
 		</dependency>
-	
+		<dependency>
+		    <groupId>uk.ac.ucl.ee</groupId>
+		    <artifactId>flanagan</artifactId>
+		    <version>1.8</version>
+		</dependency>	
 		<!-- 
 		<dependency>
 			<groupId>org.javatuples</groupId>
