--- a/pom.xml
+++ b/pom.xml
@@ -230,7 +230,7 @@ public final class BuildInformation {
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-compress</artifactId>
-			<version>1.20</version>
+			<version>1.21</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.commons</groupId>
@@ -625,8 +625,12 @@ public final class BuildInformation {
 		    <artifactId>sysout-over-slf4j</artifactId>
 		    <version>1.0.2</version>
 		</dependency>
-			
 		<!-- 
+		<dependency>
+		    <groupId>org.codehaus.plexus</groupId>
+		    <artifactId>plexus-archiver</artifactId>
+		    <version>4.2.6</version>
+		</dependency>
 		<dependency>
 		    <groupId>uk.ac.ucl.ee</groupId>
 		    <artifactId>flanagan</artifactId>
