--- a/pom.xml
+++ b/pom.xml
@@ -625,6 +625,13 @@ public final class BuildInformation {
 		    <artifactId>sysout-over-slf4j</artifactId>
 		    <version>1.0.2</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.jdom/jdom2 -->
+		<dependency>
+		    <groupId>org.jdom</groupId>
+		    <artifactId>jdom2</artifactId>
+		    <version>2.0.6</version>
+		</dependency>
+		
 		<!-- 
 		<dependency>
 		    <groupId>org.codehaus.plexus</groupId>
