--- a/pom.xml
+++ b/pom.xml
@@ -631,7 +631,11 @@ public final class BuildInformation {
 		    <artifactId>jdom2</artifactId>
 		    <version>2.0.6</version>
 		</dependency>
-		
+		<dependency>
+		  <groupId>com.github.psambit9791</groupId>
+		  <artifactId>jdsp</artifactId>
+		  <version>0.8.0</version>
+		</dependency>
 		<!-- 
 		<dependency>
 		    <groupId>org.codehaus.plexus</groupId>
