Vendor and software LIMS GUI continued

--- a/pom.xml
+++ b/pom.xml
@@ -629,6 +629,12 @@ public final class BuildInformation {
 		  <artifactId>jdsp</artifactId>
 		  <version>0.8.0</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/commons-validator/commons-validator -->
+		<dependency>
+		    <groupId>commons-validator</groupId>
+		    <artifactId>commons-validator</artifactId>
+		    <version>1.7</version>
+		</dependency>	
 		<!-- 
 		<dependency>
 		    <groupId>org.codehaus.plexus</groupId>
