--- a/pom.xml
+++ b/pom.xml
@@ -635,6 +635,11 @@ public final class BuildInformation {
 		    <artifactId>commons-validator</artifactId>
 		    <version>1.7</version>
 		</dependency>	
+		<dependency>
+		   <groupId>com.zaxxer</groupId>
+		   <artifactId>HikariCP</artifactId>
+		   <version>5.0.1</version>
+		</dependency>
 		<!-- 
 		<dependency>
 		    <groupId>org.codehaus.plexus</groupId>
