--- a/pom.xml
+++ b/pom.xml
@@ -248,7 +248,7 @@ public final class BuildInformation {
 		<dependency>
 			<groupId>org.jfree</groupId>
 			<artifactId>jfreechart</artifactId>
-			<version>1.5.0</version>
+			<version>1.5.3</version>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.jfree/org.jfree.svg -->
 		<dependency>
@@ -357,11 +357,19 @@ public final class BuildInformation {
 			<artifactId>msftbx</artifactId>
 			<version>1.8.8</version>
 		</dependency>
+		<!-- 
 		<dependency>
 			<groupId>com.object-refinery</groupId>
 			<artifactId>orsoncharts</artifactId>
 			<version>1.7</version>
 		</dependency>
+		 -->
+		<!-- https://mvnrepository.com/artifact/org.jfree/org.jfree.chart3d -->
+		<dependency>
+		    <groupId>org.jfree</groupId>
+		    <artifactId>org.jfree.chart3d</artifactId>
+		    <version>2.1.0</version>
+		</dependency>	
 		<dependency>
 			<groupId>org.geotools</groupId>
 			<artifactId>gt-brewer</artifactId>
