--- a/pom.xml
+++ b/pom.xml
@@ -181,19 +181,6 @@ public final class BuildInformation {
 			<name>WSO2 Dist Repository</name>
 			<url>http://dist.wso2.org/maven2</url>
 		</repository>
-			<!-- 		
-		<repository>
-			<id>bioinf-jena</id>
-			<name>bioinf-jena-releases</name>
-			<url>https://bio.informatik.uni-jena.de/repository/libs-release-oss/</url>
-			<releases>
-				<enabled>true</enabled>
-			</releases>
-			<snapshots>
-				<enabled>false</enabled>
-			</snapshots>
-		</repository>
-		-->
 	</repositories>
 	<dependencies>
 		<!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
@@ -213,7 +200,6 @@ public final class BuildInformation {
 		    <groupId>org.apache.logging.log4j</groupId>
 		    <artifactId>log4j-slf4j-impl</artifactId>
 		    <version>2.19.0</version>
-		    <scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.commons</groupId>
@@ -265,47 +251,11 @@ public final class BuildInformation {
 			<groupId>org.dockingframes</groupId>
 			<artifactId>docking-frames-core</artifactId>
 			<version>1.1.21</version>
-			<exclusions>
-				<exclusion>
-					<groupId>xml-apis</groupId>
-					<artifactId>*</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>org.w3c.dom</groupId>
-					<artifactId>*</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>xerces</groupId>
-					<artifactId>*</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>xom</groupId>
-					<artifactId>*</artifactId>
-				</exclusion>
-			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>org.dockingframes</groupId>
 			<artifactId>docking-frames-common</artifactId>
 			<version>1.1.21</version>
-			<exclusions>
-				<exclusion>
-					<groupId>xml-apis</groupId>
-					<artifactId>*</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>org.w3c.dom</groupId>
-					<artifactId>*</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>xerces</groupId>
-					<artifactId>*</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>xom</groupId>
-					<artifactId>*</artifactId>
-				</exclusion>
-			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>javax.xml.bind</groupId>
@@ -332,20 +282,17 @@ public final class BuildInformation {
 			<artifactId>pdfbox</artifactId>
 			<version>2.0.17</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml -->
 		<dependency>
-			<groupId>org.apache.poi</groupId>
-			<artifactId>poi</artifactId>
-			<version>4.1.2</version>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.poi</groupId>
-			<artifactId>poi-ooxml-schemas</artifactId>
-			<version>4.1.2</version>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.poi</groupId>
-			<artifactId>poi-ooxml</artifactId>
-			<version>4.1.2</version>
+		    <groupId>org.apache.poi</groupId>
+		    <artifactId>poi-ooxml</artifactId>
+		    <version>5.2.3</version>
+        	<exclusions>
+        		<exclusion>
+	                <groupId>org.apache.xmlbeans</groupId>
+	                <artifactId>xmlbeans</artifactId>
+	            </exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>org.jsoup</groupId>
@@ -362,13 +309,6 @@ public final class BuildInformation {
 			<artifactId>msftbx</artifactId>
 			<version>1.8.8</version>
 		</dependency>
-		<!-- 
-		<dependency>
-			<groupId>com.object-refinery</groupId>
-			<artifactId>orsoncharts</artifactId>
-			<version>1.7</version>
-		</dependency>
-		 -->
 		<!-- https://mvnrepository.com/artifact/org.jfree/org.jfree.chart3d -->
 		<dependency>
 		    <groupId>org.jfree</groupId>
@@ -389,6 +329,12 @@ public final class BuildInformation {
 			<groupId>com.Ostermiller</groupId>
 			<artifactId>utils</artifactId>
 			<version>1.08.02</version>
+			<exclusions>
+				<exclusion>
+					<groupId>xml-apis</groupId>
+					<artifactId>*</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>org.openscience.cdk</groupId>
@@ -405,10 +351,6 @@ public final class BuildInformation {
 				</exclusion>
 				<exclusion>
 					<groupId>xerces</groupId>
-					<artifactId>*</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>xom</groupId>
 					<artifactId>*</artifactId>
 				</exclusion>
 			</exclusions>
@@ -428,10 +370,6 @@ public final class BuildInformation {
 				</exclusion>
 				<exclusion>
 					<groupId>xerces</groupId>
-					<artifactId>*</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>xom</groupId>
 					<artifactId>*</artifactId>
 				</exclusion>
 			</exclusions>
@@ -472,20 +410,6 @@ public final class BuildInformation {
 			<groupId>com.thoughtworks.xstream</groupId>
 			<artifactId>xstream</artifactId>
 			<version>1.4.10</version>
-			<exclusions>
-				<exclusion>
-					<groupId>xml-apis</groupId>
-					<artifactId>*</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>org.w3c.dom</groupId>
-					<artifactId>*</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>xerces</groupId>
-					<artifactId>*</artifactId>
-				</exclusion>
-			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>com.googlecode.juniversalchardet</groupId>
@@ -493,15 +417,10 @@ public final class BuildInformation {
 			<version>1.0.3</version>
 		</dependency>
 		<dependency>
-			<groupId>org.w3c.dom</groupId>
-			<artifactId>org.w3c.dom.svg</artifactId>
-			<version>1.1.0.v201011041433</version>
-		</dependency>
-		<dependency>
 			<groupId>com.oracle</groupId>
 			<artifactId>ojdbc8</artifactId>
 			<version>18.3</version>
-		</dependency>
+		</dependency>		
 		<!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
 		<dependency>
 		    <groupId>org.postgresql</groupId>
@@ -571,47 +490,7 @@ public final class BuildInformation {
 		<dependency>
 		    <groupId>edu.umich.med.mrc2.datoolbox.gui</groupId>
 		    <artifactId>owl</artifactId>
-		    <version>1.01</version>
+		    <version>1.02</version>
 		</dependency>
-		<!-- https://mvnrepository.com/artifact/net.java.dev.jna/jna -->
-		<dependency>
-		    <groupId>net.java.dev.jna</groupId>
-		    <artifactId>jna</artifactId>
-		    <version>5.12.1</version>
-		</dependency>
-		<!-- https://mvnrepository.com/artifact/org.apache.xalan/xalan -->
-		<dependency>
-		    <groupId>org.apache.xalan</groupId>
-		    <artifactId>xalan</artifactId>
-		    <version>2.7.1</version>
-		</dependency>
-		
-		<!-- 
-		<dependency>
-		    <groupId>org.codehaus.plexus</groupId>
-		    <artifactId>plexus-archiver</artifactId>
-		    <version>4.2.6</version>
-		</dependency>
-		<dependency>
-		    <groupId>uk.ac.ucl.ee</groupId>
-		    <artifactId>flanagan</artifactId>
-		    <version>1.8</version>
-		</dependency>
-		<dependency>
-			<groupId>org.javatuples</groupId>
-			<artifactId>javatuples</artifactId>
-			<version>1.2</version>
-		</dependency>
-		<dependency> <groupId>de.unijena.bioinf.ms</groupId> <artifactId>passatutto</artifactId> 
-			<version>4.4.5</version> </dependency> <dependency> <groupId>de.unijena.bioinf</groupId> 
-			<artifactId>jjobs-core</artifactId> <version>0.9.9</version> <scope>compile</scope> 
-			</dependency> <dependency> <groupId>de.unijena.bioinf.ms</groupId> <artifactId>chemistry_base</artifactId> 
-			<version>4.4.5</version> <scope>compile</scope> </dependency> <dependency> 
-			<groupId>de.unijena.bioinf.ms</groupId> <artifactId>preprocessing</artifactId> 
-			<version>4.4.5</version> <scope>compile</scope> </dependency> <dependency> 
-			<groupId>de.unijena.bioinf.ms</groupId> <artifactId>sirius_api</artifactId> 
-			<version>4.4.5</version> <scope>compile</scope> </dependency> <dependency> 
-			<groupId>de.ipbhalle.metfraglib</groupId> <artifactId>MetFragLib</artifactId> 
-			<version>2.4.5</version> </dependency> -->
 	</dependencies>
 </project>
