--- a/.classpath
+++ b/.classpath
@@ -34,5 +34,6 @@
 	<classpathentry kind="lib" path="C:/Program Files/Java/javafx-sdk-15/lib/javafx.swing.jar"/>
 	<classpathentry kind="lib" path="C:/Program Files/Java/javafx-sdk-15/lib/javafx.web.jar"/>
 	<classpathentry kind="lib" path="C:/Program Files/Java/javafx-sdk-15/lib/javafx-swt.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
