--- a/pom.xml
+++ b/pom.xml
@@ -542,6 +542,12 @@ public final class BuildInformation {
 		    <groupId>org.piccolo2d</groupId>
 		    <artifactId>piccolo2d-core</artifactId>
 		    <version>1.3.1</version>
-		</dependency>			
+		</dependency>	
+		<!-- https://mvnrepository.com/artifact/nz.ac.waikato.cms.weka/weka-stable -->
+		<dependency>
+		    <groupId>nz.ac.waikato.cms.weka</groupId>
+		    <artifactId>weka-stable</artifactId>
+		    <version>3.8.6</version>
+		</dependency>				
 	</dependencies>
 </project>
