--- a/pom.xml
+++ b/pom.xml
@@ -13,19 +13,51 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>edu.umich.mrc2</groupId>
 	<artifactId>MRC2ToolBox</artifactId>
-	<version>1.2.64</version>
+	<version>1.2.69</version>
 	<name>MRC2ToolBox</name>
 	<description>Metabolomics data analysis</description>
 	<properties>
 		<project.build.sourceEncoding>cp1252</project.build.sourceEncoding>
+		<native.maven.plugin.version>0.9.28</native.maven.plugin.version>
+		<mainClass>edu.umich.med.mrc2.datoolbox.main.MRC2ToolBoxCore</mainClass>
+		<project.build.directory>./target</project.build.directory>
 	</properties>
+	  <profiles>
+	    <profile>
+	      <id>native</id>
+	      <build>
+	        <plugins>
+	          <plugin>
+	            <groupId>org.graalvm.buildtools</groupId>
+	            <artifactId>native-maven-plugin</artifactId>
+	            <version>${native.maven.plugin.version}</version>
+	            <extensions>true</extensions>
+	            <executions>
+	              <execution>
+	                <id>build-native</id>
+	                <goals>
+	                  <goal>build</goal>
+	                </goals>
+	                <phase>package</phase>
+	              </execution>
+	              <execution>
+	                <id>test-native</id>
+	                <goals>
+	                  <goal>test</goal>
+	                </goals>
+	                <phase>test</phase>
+	              </execution>
+	            </executions>
+	            <configuration>
+	              <!-- ... -->
+	            </configuration>
+	          </plugin>
+	        </plugins>
+	      </build>
+	    </profile>
+	  </profiles>
 	<build>
 		<sourceDirectory>src</sourceDirectory>
-		<resources>
-			<resource>
-				<directory>resources</directory>
-			</resource>
-		</resources>
 		<plugins>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
@@ -40,7 +72,7 @@
 				<configuration>
 					<archive>
 						<manifest>
-							<mainClass>edu.umich.med.mrc2.datoolbox.main.MRC2ToolBoxCore</mainClass>
+							<mainClass>${mainClass}</mainClass>
 						</manifest>
 					</archive>
 					<descriptorRefs>
@@ -112,13 +144,12 @@ public final class BuildInformation {
 						</goals>
 					</execution>
 				</executions>
-			</plugin>			
+			</plugin>		
 		</plugins>
 		<!--This plugin's configuration is used to store Eclipse m2e settings only. 
 		It has no influence on the Maven build itself. -->
 		<pluginManagement>
 			<plugins>
-
 				<plugin>
 					<groupId>org.eclipse.m2e</groupId>
 					<artifactId>lifecycle-mapping</artifactId>
@@ -204,23 +235,10 @@ public final class BuildInformation {
 		</repository>
 	</repositories>
 	<dependencies>
-		<!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
 		<dependency>
-			<groupId>org.apache.logging.log4j</groupId>
-			<artifactId>log4j-core</artifactId>
-			<version>2.19.0</version>
-		</dependency>
-		<!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-api -->
-		<dependency>
-			<groupId>org.apache.logging.log4j</groupId>
-			<artifactId>log4j-api</artifactId>
-			<version>2.19.0</version>
-		</dependency>
-		<!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-slf4j-impl -->
-		<dependency>
-		    <groupId>org.apache.logging.log4j</groupId>
-		    <artifactId>log4j-slf4j-impl</artifactId>
-		    <version>2.19.0</version>
+		    <groupId>ch.qos.logback</groupId>
+		    <artifactId>logback-classic</artifactId>
+		    <version>1.2.6</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.commons</groupId>
