--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>edu.umich.mrc2</groupId>
 	<artifactId>MRC2ToolBox</artifactId>
-	<version>1.2.77</version>
+	<version>1.2.78</version>
 	<name>MRC2ToolBox</name>
 	<description>Metabolomics data analysis</description>
 	<properties>
@@ -580,6 +580,16 @@ public final class BuildInformation {
 		    <groupId>nz.ac.waikato.cms.weka</groupId>
 		    <artifactId>weka-stable</artifactId>
 		    <version>3.8.6</version>
-		</dependency>				
+		</dependency>	
+		<dependency>
+		    <groupId>com.epam.indigo</groupId>
+		    <artifactId>indigo</artifactId>
+		    <version>1.19.0</version>
+		</dependency>
+		<dependency>
+		    <groupId>com.epam.indigo</groupId>
+		    <artifactId>indigo-inchi</artifactId>
+		    <version>1.19.0</version>
+		</dependency>		
 	</dependencies>
 </project>
